# python-opsi-common

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  opsi-dev-tool.yml  pyproject.toml  pyproject.toml.uv
opsicommon/: __init__.py  exceptions.py  license.py  logging.py  messagebus.py  objects.py  types.py
opsicommon/client/: jsonrpc.py  opsiservice.py
opsicommon/config/: __init__.py  opsi.py
opsicommon/logging/: __init__.py  constants.py  logging.py
opsicommon/messagebus/: __init__.py  file_transfer.py  message.py  process.py  terminal.py
opsicommon/package/: __init__.py  archive.py  associated_files.py  control_file_handling.py  legacy_control_file.py  repo_meta.py  serialization.py  wim.py
opsicommon/server/: __init__.py  rights.py  setup.py
opsicommon/ssl/: __init__.py  common.py  darwin.py  linux.py  windows.py
opsicommon/system/: __init__.py  info.py  network.py  subprocess.py
opsicommon/system/darwin/: __init__.py
opsicommon/system/linux/: __init__.py
opsicommon/system/posix/: __init__.py  subprocess.py
opsicommon/system/windows/: __init__.py  session.py  subprocess.py
opsicommon/testing/: helpers.py
opsicommon/utils/: __init__.py  rsync.py
perftest/: packaging-benchmarking.py
tests/: conftest.py  helpers.py  test_client_jsonrpc.py  test_client_opsiservice.py  test_config.py  test_exceptions.py  test_license.py  test_logging.py  test_messagebus.py  test_messagebus_file_transfer.py  test_messagebus_message.py  test_messagebus_process.py  test_messagebus_terminal.py  test_objects.py  test_package.py  test_package_archive.py  test_package_repo_meta.py  test_package_wim.py  test_server.py  test_server_rights.py  test_ssl.py  test_system.py  test_system_info.py  test_system_network.py  test_system_session.py  test_system_subprocess.py  test_testing_helpers.py  test_types.py  test_utils.py  test_utils_rsync.py
tests/data/client/jsonrpc/: interface.json
tests/data/license/: modules
tests/data/objects/: audithardwareonhost.json  opsihwaudit.json
tests/data/package/: control  control.toml  memtest86_cpio_6.20-1.opsi  netboot_legacy_42.0-1337.opsi  netboot_new_42.0-1337.opsi  tar_zstd_packaged_42.0-1337.opsi
tests/data/ssl/: ca.conf  certindex
