[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-opsi-common"
version = "4.3.17.2"
description = "The opsi python common library"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
[[tool.poetry.packages]]
include = "opsicommon"

[[tool.poetry.source]]
name = "uibpypi"
url = "http://pypi.uib.gmbh:8080/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
colorlog = ">=6.6"
distro = ">=1.6"
lz4 = ">=4.0"
msgpack = ">=1.0"
msgspec = ">=0.15"
psutil = ">=5.8"
pycryptodome = ">=3.10"
requests = ">=2.26"
rich = ">=13.0"
websocket-client = ">=1.4"
zstandard = ">=0.21"
pyzsync = ">=1.2"
tomlkit = "^0.12"
pydantic = "^2.5"
cryptography = "^42.0"
ptyprocess = "^0.7"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.dependencies.pywin32]
platform = "win32"
version = ">=303"

[tool.poetry.dependencies.pywinpty]
platform = "win32"
version = "^2.0"

[tool.poetry.dependencies.wmi]
platform = "win32"
version = ">=1.5"

[tool.poetry.group.dev.dependencies]
hypothesis = ">=6.32"
mypy = ">=1.0"
perflint = ">=0.7"
pytest = ">=7.0"
pytest-cov = ">=4.0"
pyupgrade = ">=3.0"
ruff = "^0.2"
types-orjson = ">=3.6"
types-requests = ">=2.27"
opsi-dev-tools = "^1.17"
pproxy = "^2.7"
types-psutil = "^5.9"
pytest-asyncio = "^0.23.5.post1"
