[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-opsi-common"
version = "4.3.19.2"
description = "The opsi python common library"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
[[tool.poetry.packages]]
include = "opsicommon"

[[tool.poetry.source]]
name = "uibpypi"
url = "http://pypi.uib.gmbh:8080/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.ruff]
line-length = 140

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiofiles = "^24.1"
annotated-types = "^0.7"
cffi = "^1.17"
colorlog = ">=6.6"
cryptography = "^43.0"
distro = ">=1.6"
lz4 = ">=4.0"
mailbits = "^0.2"
msgpack = ">=1.0"
msgspec = ">=0.15"
psutil = ">=5.8"
ptyprocess = "^0.7"
pycryptodome = ">=3.10"
pydantic = "^2.9"
pyzsync = ">=1.2"
requests = ">=2.26"
rich = ">=13.8"
tomlkit = "^0.13"
websocket-client = ">=1.4"
zstandard = ">=0.21"

[tool.ruff.format]
indent-style = "tab"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.dependencies.pywin32]
platform = "win32"
version = ">=303,<304"

[tool.poetry.dependencies.pywinpty]
platform = "win32"
version = "^2.0"

[tool.poetry.dependencies.wmi]
platform = "win32"
version = ">=1.5"

[tool.poetry.group.dev.dependencies]
hypothesis = ">=6.111"
mypy = "1.11"
perflint = ">=0.7"
pproxy = "^2.7"
pytest = ">=7.0"
pytest-asyncio = "^0.24"
pytest-cov = ">=4.0"
pyupgrade = ">=3.0"
ruff = "^0.6"
types-aiofiles = "^24.1"
types-orjson = ">=3.6"
types-psutil = "^6.0"
types-requests = ">=2.32"
